# MiniGit

./: .gitignore  CMakeLists.txt  Commit.cpp  Commit.h  Log.cpp  Log.h  MiniGit.h  README.md  Repository.cpp  Repository.h  main.cpp  vcpkg.json
.github/workflows/: cmake-single-platform.yml
tests/MiniGit_autotester/: MiniGit_autotester.py
